--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   firebase_auth: ^5.6.2
   cloud_firestore: ^5.6.11
   google_fonts: ^6.2.1
+  cloudinary_public: ^0.23.1
+  get: ^4.7.2
+  uuid: ^4.5.1
+  image_picker: ^1.1.2
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
