--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   uuid: ^4.5.1
   image_picker: ^1.1.2
   flutter_staggered_grid_view: ^0.7.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
