--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_staggered_grid_view: ^0.7.0
   intl: ^0.20.2
+  provider: 
 
 dev_dependencies:
   flutter_test:
